[project]
name = "backend-service"
version = "0.1.0"
description = "Backend de prácticas con FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
]

[dependency-groups]
dev = ["ruff", "pyright", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
lint.select = ["E", "F", "I", "B"]  # errores básicos + imports + bugbear

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]